#414 small java 17 cleanup