@@ -15,14 +15,13 @@
  */
 package org.openehealth.ipf.commons.ihe.xds.core.ebxml.ebxml30;
 
+import java.util.Collections;
+import java.util.List;
+
 import org.openehealth.ipf.commons.ihe.xds.core.ebxml.EbXMLInternationalString;
 import org.openehealth.ipf.commons.ihe.xds.core.metadata.LocalizedString;
 import org.openehealth.ipf.commons.ihe.xds.core.stub.ebrs30.rim.InternationalStringType;
 import org.openehealth.ipf.commons.ihe.xds.core.stub.ebrs30.rim.LocalizedStringType;
-
-import java.util.Collections;
-import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * Encapsulation of {@link InternationalStringType}.
@@ -88,7 +87,7 @@ public class EbXMLInternationalString30 implements EbXMLInternationalString {
         var list = international.getLocalizedString();
         return list.stream()
                 .map(this::createLocalizedString)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
