@@ -1,12 +1,12 @@
 /*
  * Copyright 2009 the original author or authors.
- * 
+ *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
  *     http://www.apache.org/licenses/LICENSE-2.0
- *     
+ *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -19,8 +19,6 @@ import org.openehealth.ipf.commons.ihe.xds.core.ebxml.EbXMLFactory;
 import org.openehealth.ipf.commons.ihe.xds.core.ebxml.EbXMLObjectLibrary;
 import org.openehealth.ipf.commons.ihe.xds.core.ebxml.EbXMLRegistryPackage;
 import org.openehealth.ipf.commons.ihe.xds.core.metadata.SubmissionSet;
-
-import java.util.stream.Collectors;
 
 import static org.openehealth.ipf.commons.ihe.xds.core.metadata.Timestamp.toHL7;
 import static org.openehealth.ipf.commons.ihe.xds.core.metadata.Vocabulary.SLOT_NAME_INTENDED_RECIPIENT;
@@ -48,7 +46,7 @@ public class SubmissionSetTransformer extends XDSMetaClassTransformer<EbXMLRegis
     /**
      * Constructs the transformer
      * @param factory
-     *          factory for version independent ebXML objects. 
+     *          factory for version independent ebXML objects.
      */
     public SubmissionSetTransformer(EbXMLFactory factory) {
         super(SUBMISSION_SET_PATIENT_ID_EXTERNAL_ID,
@@ -70,18 +68,18 @@ public class SubmissionSetTransformer extends XDSMetaClassTransformer<EbXMLRegis
     protected SubmissionSet createMetaClassInstance() {
         return new SubmissionSet();
     }
-    
+
     @Override
     protected void addAttributes(SubmissionSet metaData, EbXMLRegistryPackage ebXML, EbXMLObjectLibrary objectLibrary) {
         super.addAttributes(metaData, ebXML, objectLibrary);
-        ebXML.setStatus(metaData.getAvailabilityStatus());                
+        ebXML.setStatus(metaData.getAvailabilityStatus());
         ebXML.setHome(metaData.getHomeCommunityId());
     }
-    
+
     @Override
     protected void addAttributesFromEbXML(SubmissionSet metaData, EbXMLRegistryPackage ebXML) {
         super.addAttributesFromEbXML(metaData, ebXML);
-        metaData.setAvailabilityStatus(ebXML.getStatus());        
+        metaData.setAvailabilityStatus(ebXML.getStatus());
         metaData.setHomeCommunityId(ebXML.getHome());
     }
 
@@ -95,7 +93,7 @@ public class SubmissionSetTransformer extends XDSMetaClassTransformer<EbXMLRegis
         ebXML.addSlot(SLOT_NAME_INTENDED_RECIPIENT, slotValues);
         ebXML.addSlot(SLOT_NAME_SUBMISSION_TIME, toHL7(metaData.getSubmissionTime()));
     }
-    
+
     @Override
     protected void addSlotsFromEbXML(SubmissionSet metaData, EbXMLRegistryPackage ebXML) {
         super.addSlotsFromEbXML(metaData, ebXML);
@@ -103,11 +101,11 @@ public class SubmissionSetTransformer extends XDSMetaClassTransformer<EbXMLRegis
         var recipients = metaData.getIntendedRecipients();
         recipients.addAll(ebXML.getSlotValues(SLOT_NAME_INTENDED_RECIPIENT).stream()
                 .map(recipientTransformer::fromEbXML)
-                .collect(Collectors.toList()));
+                .toList());
 
         metaData.setSubmissionTime(ebXML.getSingleSlotValue(SLOT_NAME_SUBMISSION_TIME));
     }
-    
+
     @Override
     protected void addClassificationsFromEbXML(SubmissionSet set, EbXMLRegistryPackage regPackage) {
         super.addClassificationsFromEbXML(set, regPackage);
@@ -118,7 +116,7 @@ public class SubmissionSetTransformer extends XDSMetaClassTransformer<EbXMLRegis
         var contentType = regPackage.getSingleClassification(SUBMISSION_SET_CONTENT_TYPE_CODE_CLASS_SCHEME);
         set.setContentTypeCode(codeTransformer.fromEbXML(contentType));
     }
-    
+
     @Override
     protected void addClassifications(SubmissionSet set, EbXMLRegistryPackage regPackage, EbXMLObjectLibrary objectLibrary) {
         super.addClassifications(set, regPackage, objectLibrary);
@@ -130,16 +128,16 @@ public class SubmissionSetTransformer extends XDSMetaClassTransformer<EbXMLRegis
         var contentType = codeTransformer.toEbXML(set.getContentTypeCode(), objectLibrary);
         regPackage.addClassification(contentType, SUBMISSION_SET_CONTENT_TYPE_CODE_CLASS_SCHEME);
     }
-    
+
     @Override
     protected void addExternalIdentifiers(SubmissionSet metaData, EbXMLRegistryPackage ebXML, EbXMLObjectLibrary objectLibrary) {
         super.addExternalIdentifiers(metaData, ebXML, objectLibrary);
 
-        ebXML.addExternalIdentifier(metaData.getSourceId(), 
+        ebXML.addExternalIdentifier(metaData.getSourceId(),
                 SUBMISSION_SET_SOURCE_ID_EXTERNAL_ID,
                 SUBMISSION_SET_LOCALIZED_STRING_SOURCE_ID);
     }
-    
+
     @Override
     protected void addExternalIdentifiersFromEbXML(SubmissionSet metaData, EbXMLRegistryPackage ebXML) {
         super.addExternalIdentifiersFromEbXML(metaData, ebXML);
